エクスポートの説明を修正

--- a/app/views/exports/index.html.slim
+++ b/app/views/exports/index.html.slim
@@ -40,13 +40,13 @@
       p 新CSVフォーマット
       pre
         |
-          <span class="text-danger">40</span>,"トピックタグA","好きな食べ物は？","あっさりしているものが好きですね！"
-          <span class="text-danger">41</span>,"トピックタグA / トピックタグB","趣味はなんですか？","最近ジョギングを始めました。"
+          <span class="text-danger">40</span>,トピックタグA,好きな食べ物は？,あっさりしているものが好きですね！
+          <span class="text-danger">41</span>,トピックタグA/トピックタグB,趣味はなんですか？,最近ジョギングを始めました。
 
       p
         |このフォーマットを利用して質問や回答のテキストを書き換えると、そのままインポートに使用できます。
         br
-        |トピックタグが複数存在する場合は、/ 区切りで表現しています。
+        |トピックタグが複数存在する場合は、/ 区切りで表現します。
 
 - if @exports.count > 1
   h5 過去のエクスポート
