Fix back link url

--- a/app/views/question_answers/_form.html.slim
+++ b/app/views/question_answers/_form.html.slim
@@ -1,4 +1,4 @@
-= link_to '戻る', bot_question_answers_path(session[:question_answers_queries]), class: 'btn btn-default'
+= link_to '戻る', bot_question_answers_path(@bot, session[:question_answers_queries]), class: 'btn btn-default'
 br
 br
 
