埋め込み系をbot管理タグから移動

--- a/app/views/bots/edit.html.slim
+++ b/app/views/bots/edit.html.slim
@@ -17,7 +17,7 @@ ul.nav.nav-tabs
   li.nav-item.active
     a href="#bot" data-toggle="tab" Bot管理
   li.nav-item
-    a href="#widget" data-toggle="tab" チャットウェジェット
+    a href="#widget" data-toggle="tab" 埋め込み
 
 .tab-content
   .tab-pane.active id="bot"
@@ -28,6 +28,36 @@ ul.nav.nav-tabs
         = render 'form'
         
   .tab-pane id="widget"
+    = bootstrap_nested_form_for(@bot, data: { event_name: "Update bot", bot_id: @bot.id, bot_name: @bot.name }) do |f|
+      br 
+      = f.form_group nil, label: { text: '埋め込みコード' } do
+        .form-group.form-inline
+          | 高さ: #{text_field_tag :width, 500, class: 'form-control'}  
+          | 幅: #{text_field_tag :height, 500, class: 'form-control'}
+        = text_field_tag :embed, bot_embed_code(@bot), class: 'form-control', readonly: true
+      .form-group.form-inline
+        .panel.panel-default
+          .panel-heading
+            label チャット埋め込みの許可ホスト
+            br/
+          .panel-body
+            #bot-allowed-hosts
+              = f.fields_for :allowed_hosts do |nf|
+                = nf.select :scheme, AllowedHost.schemes.keys, class: 'form-control', hide_label: true
+                = nf.text_field :domain, class: 'form-control', hide_label: true, placeholder: '*.example.com'
+                = nf.link_to_remove '削除', class: 'btn btn-danger', data: { confirm: '本当に削除してよろしいですか？' }
+                hr/
+            = f.link_to_add '許可ホストを追加', :allowed_hosts, class: 'btn btn-default', data: { target: '#bot-allowed-hosts' }
+            = f.submit class: 'btn btn-success'
+            p.help-block
+              | ※１つも登録がない場合すべてのホストに対して埋め込みが許可されます
+              br/
+              | ※追加と削除を行ったら必ず更新するボタンを押してください
+              br/
+              | ※サブドメインは
+              code *
+              | で全てにマッチできます（例：*.example.com）サブドメイン無しは個別に登録する必要があります
+
     .panel.panel-default
       .panel-heading: h4
         |チャットウィジェット
