--- a/app/views/exports/index.html.slim
+++ b/app/views/exports/index.html.slim
@@ -44,9 +44,11 @@
           <span class="text-danger">41</span>,トピックタグA/トピックタグB,趣味はなんですか？,最近ジョギングを始めました。
 
       p
-        |このフォーマットを利用して質問や回答のテキストを書き換えると、そのままインポートに使用できます。
-        br
-        |トピックタグが複数存在する場合は、/ 区切りで表現します。
+        | このフォーマットを利用して質問や回答のテキストを書き換えると、そのままインポートに使用できます。<br />
+          トピックタグが複数存在する場合は、
+        code 
+          <span>/</span>
+        | 区切りで表現します。
 
 - if @exports.count > 1
   h5 過去のエクスポート
