--- a/app/views/ip_addresses/_form.html.slim
+++ b/app/views/ip_addresses/_form.html.slim
@@ -2,7 +2,7 @@
   .col-md-6.col-xs-12
     = bootstrap_form_for [@bot, @ip_address] do |f|
 
-      = f.text_field :ip_address, hide_label: true
+      = f.text_field :permission, hide_label: true
 
       .actions
         = f.submit class: 'btn btn-primary'
