--- a/app/views/bots/show.html.slim
+++ b/app/views/bots/show.html.slim
@@ -1,46 +1,73 @@
 = render layout: 'bots/layout' do
 
-  .card.mb-4
-    .card-header アップデート情報
-    .card-block
-      h5: strong
-        - if Time.current < Time.zone.parse('2017-07-07 23:59:59')
-          small: span.label.label-warning NEW
-          = space
-        span 初期質問リスト機能が使えるようになりました
-      p
-        |初期質問リストとは：チャットを開始すぐの画面に、任意の質問候補を最大で５つまで表示できる機能です。
-        br
-        |時期によって質問内容が予想される場合等に設定しておくと効果的です。
-      = link_to new_chats_path(@bot.token), class: 'btn btn-link', target: '_blank' do
-        span チャット画面で設定する
-        = space
-        i.material-icons keyboard_arrow_right
+  .mb-4
+    h6.mb-4
+      = material_icon 'new_releases', class: 'mi-sm mi-v-sub text-muted'
+      = space
+      span アップデート情報
 
-  .row.py-5
-    .col-6.text-center
-      h5 チャットウィジェット
+    h5: strong
+      - if Time.current < Time.zone.parse('2017-07-07 23:59:59')
+        small: span.label.label-warning NEW
+        = space
+      span 初期質問リスト機能が使えるようになりました
+    p
+      |初期質問リストとは：チャットを開始すぐの画面に、任意の質問候補を最大で５つまで表示できる機能です。
+      br
+      |時期によって質問内容が予想される場合等に設定しておくと効果的です。
+    = link_to new_chats_path(@bot.token), class: 'btn btn-link', target: '_blank' do
+      span チャット画面で設定する
+      = space
+      i.material-icons keyboard_arrow_right
+
+  hr.my-5
+
+  h6.mb-4
+    = material_icon 'extension', class: 'mi-sm mi-v-sub text-muted'
+    = space
+    span チャットご利用機能
+  p チャットは以下の３つのご利用タイプからお選びいただけます
+
+  .card.card-block.mb-4: .row
+    .col-4
       = image_tag 'chat-widget.png', alt: 'チャットウィジェット', class: 'img-fluid'
+    .col-8
+      h5.mb-3 チャットウィジェット
       p
         |ウィンドウの右下に常にくっついている形でご利用いただけます。
         br
         |初期状態では閉じているので質問をしたい時だけ開くことができます。
+        br
+        | 埋め込みコードをWebサイトのソースコードに貼り付けてご利用下さい。
       p: a.btn.btn-secondary href="#" data-toggle="modal" data-target="#chat-widget-desc"
         = material_icon 'code', class: 'mi-xs'
         = space
         span コードを取得する
 
-    .col-6.text-center
-      h5 チャット埋め込み
+  .card.card-block.mb-4: .row
+    .col-4
       = image_tag 'chat-embedding.png', alt: 'チャット埋め込み', class: 'img-fluid'
+    .col-8
+      h5.mb-3 チャット埋め込み
       p
         |ページ内の一部分にチャットのエリアを作る形でご利用いただけます。
         br
         |アクセスと同時に必ずチャットをスタートさせることができます。
+        br
+        |埋め込みコードをWebサイトのソースコードに貼り付けてご利用下さい。
       p: a.btn.btn-secondary href="#" data-toggle="modal" data-target="#chat-embedding-desc"
         = material_icon 'code', class: 'mi-xs'
         = space
         span コードを取得する
+
+  .card.card-block.mb-4
+    h5.mb-3 チャット画面に直接アクセス
+    p
+      |チャット画面のURLをメールなどでシェアしていただいてもご利用が可能です。
+      br
+      |以下のURLをお使い下さい
+    input.form-control readonly=true value=chats_url(@bot.token) onclick="this.select()"
+
 
   .modal.fade#chat-widget-desc tabindex="-1" role="dialog"
     .modal-dialog role="document"
@@ -49,6 +76,7 @@
           h5.modal-title チャットウィジェット
           button.close type="button" data-dismiss="modal" &times;
         .modal-body
+          p 以下のコードをWebサイトのソースコードに貼り付けて下さい
           p= render 'chat_widgets/embed_code'
           = link_to '#', class: 'btn btn-secondary', data: { role: 'copy-button', target: '#chat-widget-embed-code' } do
             i.material-icons content_copy
