--- a/app/assets/stylesheets/app/modules/nav.scss
+++ b/app/assets/stylesheets/app/modules/nav.scss
@@ -29,6 +29,10 @@
         // background-color: rgba(#000, 0.03);
         color: darken($base-text-color, 10%);
       }
+
+      &:focus {
+        border-color: transparent;
+      }
     }
   }
 }
