--- a/app/views/kaminari/_first_page.html.slim
+++ b/app/views/kaminari/_first_page.html.slim
@@ -1,3 +1,3 @@
-li
-  = link_to_unless current_page.first?, raw(t 'views.pagination.first'),
-    url, remote: remote
+li.page-item
+  = link_to url, remote: remote, class: 'page-link' do
+    = material_icon 'first_page', class: 'mi-sm'
