--- a/app/views/kaminari/_gap.html.slim
+++ b/app/views/kaminari/_gap.html.slim
@@ -1,2 +1,3 @@
-li.disabled
-  = link_to raw(t 'views.pagination.truncate'), '#'
+li.page-item.disabled
+  = link_to '#', class: 'page-link' do
+    = material_icon 'more_horiz', class: 'mi-sm'
