--- a/app/views/kaminari/_next_page.html.slim
+++ b/app/views/kaminari/_next_page.html.slim
@@ -1,3 +1,3 @@
-li
-  = link_to_unless current_page.last?, raw(t 'views.pagination.next'),
-    url, rel: 'next', remote: remote
+li.page-item
+  = link_to url, rel: 'next', remote: remote, class: 'page-link' do
+    = material_icon 'keyboard_arrow_right', class: 'mi-sm'
