--- a/app/views/kaminari/_page.html.slim
+++ b/app/views/kaminari/_page.html.slim
@@ -1,3 +1,4 @@
-li class="#{'active' if page.current?}"
+li.page-item class="#{'active' if page.current?}"
   = link_to page, page.current? ? '#' : url,
+    class: 'page-link',
     remote: remote, rel: page.next? ? 'next' : page.prev? ? 'prev' : nil
