--- a/app/views/kaminari/_prev_page.html.slim
+++ b/app/views/kaminari/_prev_page.html.slim
@@ -1,3 +1,3 @@
-li
-  = link_to_unless current_page.first?, raw(t 'views.pagination.previous'),
-    url, rel: 'prev', remote: remote
+li.page-item
+  = link_to url, rel: 'prev', remote: remote, class: 'page-link' do
+    = material_icon 'keyboard_arrow_left', class: 'mi-sm'
