--- a/app/views/layouts/shared/ui/_side_nav.html.slim
+++ b/app/views/layouts/shared/ui/_side_nav.html.slim
@@ -20,7 +20,7 @@
         = space
         span.badge class=('badge-warning' unless unstarted_tasks_count.zero?) = unstarted_tasks_count
       = link_to "ボットテスト", new_bot_chat_test_path(@bot), class: 'list-group-item', data: {event_name: 'Open chat test', bot_id: @bot.id, bot_name: @bot.name }
-      = link_to bot_allowed_ip_addresses_path(@bot), class: 'list-group-item', data: {event_name: 'Open ip address', bot_id: @bot.id, bot_name: @bot.name } do
+      /= link_to bot_allowed_ip_addresses_path(@bot), class: 'list-group-item', data: {event_name: 'Open ip address', bot_id: @bot.id, bot_name: @bot.name } do
         span 許可IPアドレス
         - if Time.current < Time.zone.parse('2017-08-11 23:59:59')
           = space
