Make base of threads#index

--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -30,7 +30,7 @@
             = space
             span ダッシュボード
         li class="nav-item"
-          = active_link_to bot_threads_path(@bot), class: 'nav-link', active: :exact do
+          = active_link_to bot_threads_path(@bot), class: 'nav-link' do
             = material_icon 'history', class: 'text-gray-light mi-sm'
             = space
             span 対話履歴
