--- a/app/views/shared/_pagination.html.slim
+++ b/app/views/shared/_pagination.html.slim
@@ -4,8 +4,8 @@ nav.d-flex.justify-content-between
       - if resources.current_page == 1
         span 1〜
       - else
-        span #{resources.length * (resources.current_page - 1) + 1}〜
-      span #{resources.current_page * resources.length}件表示 /#{space}
+        span #{per_page * (resources.current_page - 1) + 1}〜
+      span #{per_page * (resources.current_page - 1) + resources.length}件表示 /#{space}
     - else
       span 全件表示 /#{space}
     span #{resources.total_count}件
