--- a/app/views/threads/index.html.slim
+++ b/app/views/threads/index.html.slim
@@ -1,46 +1,57 @@
 = render layout: 'bots/layout' do
+  .text-center: .btn-group
+    a.btn(
+      href=bot_threads_path(@bot, params: role_filter_params)
+      class=(class_names('btn-outline-primary' => params[:normal].present?, 'btn-primary' => params[:normal].blank?))
+      data-event-name="Open all threads"
+      data-bot-id=@bot.id
+      data-bot-name=@bot.name
+    )
+      |通常対話のみ
 
-  div
-    ul.nav.nav-pills
-      li role="presentation" class=('active' if params[:normal].blank?)
-        = link_to '通常対話のみ', bot_threads_path(@bot, params: role_filter_params), mixpanel_event_data('Open all threads', @bot)
+    a.btn(
+      href=bot_threads_path(@bot, role_filter_params(normal: 1))
+      class=(class_names('btn-outline-primary' => params[:normal].blank?, 'btn-primary' => params[:normal].present?))
+      data-event-name="Open normal threads"
+      data-bot-id=@bot.id
+      data-bot-name=@bot.name
+    )
+      |Bot管理者対話のみ
 
-      li role="presentation" class=('active' if params[:normal].present?)
-        = link_to 'Bot管理者対話のみ', bot_threads_path(@bot, role_filter_params({normal: 1})), mixpanel_event_data('Open normal threads', @bot)
-    br
-    ul.nav.nav-pills
-      li role="presentation" class=('active' if params[:filter].blank? && params[:good].blank? && params[:bad].blank? && params[:answer_marked].blank?)
-        = link_to '全て', bot_threads_path(@bot, params: message_filter_params), mixpanel_event_data('Open all threads', @bot)
-
-      = threads_filter_li :filter do
-        = threads_filter_link :filter, 'Open failed threads', @bot do
-          i.fa.fa-exclamation-triangle.text-warning
+  .d-flex.justify-content-between.align-items-start.my-2.p-2.bg-faded
+    .checkbox-pill-group
+      label.checkbox-pill
+        input.checkbox-pill__input type="checkbox" checked=true
+        .checkbox-pill__label
+          = material_icon 'error_outline', class: 'text-muted mi-sm'
           = space
-          span 回答失敗のみ
-
-      = threads_filter_li :good do
-        = threads_filter_link :good, 'Open good threads', @bot do
-          i.fa.fa-thumbs-up.text-success
+          span 回答失敗
+      label.checkbox-pill
+        input.checkbox-pill__input type="checkbox" checked=true
+        .checkbox-pill__label
+          = material_icon 'thumb_up', class: 'text-success mi-sm'
           = space
-          span Goodがある対話
-
-      = threads_filter_li :bad do
-        = threads_filter_link :bad, 'Open bad threads', @bot do
-          i.fa.fa-thumbs-down.text-danger
+          span Good
+      label.checkbox-pill
+        input.checkbox-pill__input type="checkbox" checked=true
+        .checkbox-pill__label
+          = material_icon 'thumb_down', class: 'text-danger mi-sm'
           = space
-          span Badがある対話
-
-      = threads_filter_li :answer_marked do
-        = threads_filter_link :answer_marked, 'Open marked threads', @bot do
-          i.fa.fa-flag.text-warning
+          span Bad
+      label.checkbox-pill
+        input.checkbox-pill__input type="checkbox" checked=true
+        .checkbox-pill__label
+          = material_icon 'flag', class: 'text-muted mi-sm'
           = space
-          span 注意回答がある対話
+          span 注意回答
 
-      li style="float: right"
-        = link_to '対話履歴をエクスポート', bot_threads_path(format: :csv), class: 'btn btn-default'
+    = link_to bot_threads_path(format: :csv), class: 'btn btn-secondary btn-text-sm' do
+      = material_icon 'file_download', class: 'mi-sm text-muted'
+      = space
+      span CSVエクスポート
 
   - pagination = capture do
-    = render 'shared/pagination', resources: @chats
+    = render 'shared/pagination', resources: @chats, per_page: @per_page
 
   = pagination
   - @chats.each do |chat|
