Make tasks#index view

--- a/app/views/threads/_summary.html.slim
+++ b/app/views/threads/_summary.html.slim
@@ -5,27 +5,10 @@
       - chat.messages.order(created_at: :desc).limit(2).reverse.tap do |messages|
         - messages.first.tap do |message|
           .col-sm-6.push-sm-6
-            .chat-message--my.full-width
-              .chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
-              .chat-message__balloon= message.body
+            = render 'messages/guest_balloon', message: message
         - messages.second.tap do |message|
           .col-sm-6.pull-sm-6 style="padding-top:16px"
-            .chat-message.full-width
-              .chat-message__icon style=("background-image:url(#{bot.image_url});")
-              .chat-message__balloon
-                = message.body
-              .d-flex.justify-content-between
-                .chat-message__meta
-                  - if message.answer_failed
-                    = material_icon 'error_outline', class: 'mi-sm text-muted'
-                    = space 2
-                    small 回答失敗
-                .chat-message__rating
-                  .chat-message__rating-title この返答の評価
-                  span.chat-message__rating-button.good class=('active' if message.good?)
-                    = material_icon 'thumb_up'
-                  span.chat-message__rating-button.bad class=('active' if message.bad?)
-                    = material_icon 'thumb_down'
+            = render 'messages/bot_balloon', bot: @bot, message: message
 
   .card-footer.d-flex.justify-content-between
     div
