--- a/app/views/bots/_layout.html.slim
+++ b/app/views/bots/_layout.html.slim
@@ -35,7 +35,7 @@
             = space
             span 対話履歴
         li class="nav-item"
-          = active_link_to bot_tasks_path(@bot), class: 'nav-link', active: :exact do
+          = active_link_to bot_tasks_path(@bot), class: 'nav-link' do
             = material_icon 'playlist_add_check', class: 'text-gray-light mi-sm'
             = space
             span 対話タスク
