--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -25,32 +25,15 @@
             = material_icon 'thumb_down', class: ('text-danger' if count > 0)
             = space
             = count
-    .card-block
 
+    .card-block
       - @messages.each do |message|
         .row
           - if message.guest?
             .col-6.offset-6
-              .chat-message--my.full-width
-                .chat-message__icon style=("background-image:url(#{image_path('silhouette.png')});")
-                .chat-message__balloon= message.body
+              = render 'messages/guest_balloon', message: message
           - else
             .col-6
-              .chat-message.full-width
-                .chat-message__icon style=("background-image:url(#{@bot.image_url});")
-                .chat-message__balloon
-                  = message.body
-                .d-flex.justify-content-between
-                  .chat-message__meta
-                    - if message.answer_failed
-                      = material_icon 'error_outline', class: 'mi-sm text-muted'
-                      = space 2
-                      small 回答失敗
-                  .chat-message__rating
-                    .chat-message__rating-title この返答の評価
-                    span.chat-message__rating-button.good class=('active' if message.good?)
-                      = material_icon 'thumb_up'
-                    span.chat-message__rating-button.bad class=('active' if message.bad?)
-                      = material_icon 'thumb_down'
+              = render 'messages/bot_balloon', bot: @bot, message: message
 
   = pagination
